# Emily_password

./: pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
src/emily_password.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/emily_password/backend/: crypt.py
src/emily_password/frontend/: interaction.py
src/emily_password/frontend/custom_widgets/: CascadingBoxes.py  CustomColumns.py  CustomSignals.py  CustomText.py  PasswordBox.py  StatusBox.py
src/emily_password/share/: config.py  constants.py  utils.py
tests/: test__dependencies.py  test_config.py  test_slapping.py
