[metadata]
name = emily_password
description = A password manager for Emily!
author = Emily Seebeck
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    emily_password
    emily_password.backend
    emily_password.share
    emily_password.frontend
    emily_password.bin




install_requires =
    cryptography>=3.4.8
    urwid>=2.1.2
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
emily_password = py.typed

[flake8]
max-line-length = 160